# lazy_linux

./: .gitignore  README.md  lazy_linux.py  pyproject.toml
llm/: explain_command.py  prompt_handler.py
shell/: command_executor.py  validator.py
utils/: formator.py  logger.py
